cc_library(
    name = "komori_saturation_arithmetic",
    hdrs = [
        "komori/saturation_arithmetic.hpp"
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "test",
    srcs = ["tests/saturation_arithmetic_test.cpp"],
    deps = [
        ":komori_saturation_arithmetic",
        "@googletest//:gtest_main",
    ],
    copts = ["-Wno-narrowing"],
)
