"""An header-only C++ library dedicated to Saturation Arithmetic"""
module(name = "komori_saturation_arithmetic")

bazel_dep(name = "googletest", version = "1.15.0")
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "1e08f8e0507b6b6b1f4416a9a22cf5c28beaba93",
)
